--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,51 @@
-<p>login works!</p>
+<div class="login-page">
+    <div class="login-box animate__animated animate__backInDown shadow p-3 mb-5 bg-white rounded">
+      <div class="card">
+
+        <div class="card-body">
+          <p class="login-box-msg font-weight-bold">Ingresa tus credenciales</p>
+          <form >
+
+            <div class="input-group mb-3">
+              <input type="email" class="form-control" placeholder="Correo o usuario" formControlName="email">
+              <div class="input-group-append">
+                <div class="input-group-text">
+                  <span class="fas fa-envelope"></span>
+                </div>
+              </div>
+            </div>
+
+            <div class="input-group mb-3">
+              <input type="password" class="form-control" placeholder="Contraseña" #password formControlName="password">
+              <div class="input-group-append">
+                <div class="input-group-text">
+                  <a style="cursor: pointer;">
+                    <i class="fas fa-eye-slash" #tooglePassword></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-8">
+                <div class="icheck-primary">
+                  <input type="checkbox" id="remember" style="margin-right: 5px;" formControlName="remember">
+                  <label for="remember">
+                    Guardar sesión
+                  </label>
+                </div>
+              </div>
+              <!-- /.col -->
+              <div class="col-4">
+                <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <!--<a [routerLink]="['/forgot-pass']">Olvide mi contraseña</a>-->
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
