--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,12 +2,27 @@
 <nav class="main-header navbar navbar-expand navbar-dark pl-5 pr-5">
     <!-- Left navbar links -->
     <ul class="navbar-nav">
+
       <li class="nav-item d-none d-sm-inline-block">
-        <a [routerLink]="['/dashboard/mapas']" class="nav-link">Mapa</a>
+        <a [routerLink]="['/dashboard/mapas']" class="nav-link">Dashboard</a>
       </li>
+
+      <div class="dropdown show">
+        <a class="nav-link dropdown-toggle" role="button" 
+        id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Mapas
+        </a>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <a class="dropdown-item" [routerLink]="['/dashboard/añadir-marcador']">Añadir marcador</a>
+          <a class="dropdown-item" data-toggle="modal" data-target="#modal-lg" style="cursor: pointer;">Mostrar lista</a>
+        </div>
+
+      </div>
+
       <li class="nav-item d-none d-sm-inline-block">
         <a [routerLink]="['/dashboard/usuarios']" class="nav-link">Usuarios</a>
       </li>
+
     </ul>
 
     <!-- Right navbar links -->
