--- a/src/app/no-found-page/no-found-page.component.html
+++ b/src/app/no-found-page/no-found-page.component.html
@@ -1,1 +1,15 @@
-<p>no-found-page works!</p>
+<section class="content">
+    <div class="error-page">
+        <h2 class="headline text-warning">404</h2>
+    </div>
+    <div class="error-content">
+        <h3>
+            <i class="fas fa-exclamation-triangle text-warning"></i>
+            :( Página no encontrada!
+        </h3>
+
+        <p>
+            No se encontró la página solicitada, regresa al menú principal dando clic <a [routerLink]="['/dashboard/mapas']">AQUÍ</a>
+        </p>
+    </div>
+</section>
