--- a/src/app/pages/dashboard/create-marker/create-marker.component.html
+++ b/src/app/pages/dashboard/create-marker/create-marker.component.html
@@ -15,43 +15,163 @@
             </div>
             <div class="card-body">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-8"><!--Formulario de registro de datos-->
                         <form #formMarcador="ngForm" (ngSubmit)="onSubmit(formMarcador)">
-                            <div class="card-body">
+                            <div class="card card-primary">
                                 
-                                <div class="form-group">
-                                    <label>Nombre</label>
-                                    <input class="form-control" type="text" name="name" #name="ngModel" 
-                                    [(ngModel)]="marcador.name" required>
-                                    <small *ngIf="name.touched && !name.valid" style="color: rgb(170, 3, 3);">
-                                        Campo obligatorio
-                                    </small>
-                                </div>
-                               
-                                <div class="form-group">
-                                    <label>Estado</label>
-                                    <input class="form-control" type="text" name="state" #state="ngModel" 
-                                    [(ngModel)]="marcador.state" required>
-                                    <small *ngIf="state.touched && !state.valid" style="color: rgb(170, 3, 3);">
-                                        Campo obligatorio
-                                    </small>
+                                <div class="card-header">
+                                    <h3 class="card-title">Información principal</h3>
                                 </div>
 
-                                <div class="form-group">
-                                    <label for="">Coordenadas</label>
-                                    <input type="text" class="form-control" readonly value="{{currentlyCoords}}"
-                                    name="geometry" #geometry="ngModel" [(ngModel)]="marcador.geometry">
-                                    
+                                <div class="card-body">
+
+                                    <div class="row">
+
+                                        <div class="col-sm-4">
+
+                                            <div class="form-group">
+                                                <label>Código</label>
+                                                <input class="form-control" type="text" name="name" #name="ngModel" 
+                                                [(ngModel)]="marcador.name" required>
+                                                <sub *ngIf="name.touched && !name.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="col-sm-4">
+
+                                            <div class="form-group">
+                                                <label>Estado</label>
+                                                <select class="form-control" type="text" name="state" #state="ngModel" 
+                                                [(ngModel)]="marcador.state" required>
+                                                <option value="Activo">Activo</option>
+                                                <option value="Inactivo">Inactivo</option>
+                                                <option value="En mantenimiento">En mantenimiento</option>
+                                                </select>
+                                                <sub *ngIf="state.touched && !state.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+
+                                        </div>
+        
+                                        <div class="col-sm-4">
+
+                                            <div class="form-group">
+                                                <label for="">Coordenadas</label>
+                                                <input type="text" class="form-control" readonly value="{{currentlyCoords}}"
+                                                name="geometry" #geometry="ngModel" [(ngModel)]="marcador.geometry">
+                                                <sub *ngIf="!currentlyCoords" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+
+                                        </div>
+    
+
+                                    </div>
+
                                 </div>
                                 
                             </div>
+
+                            <!--Formulario de registro de datos ICA-->
+                            <div class="card card-primary">
+                                <div class="card-header">
+                                    <h3 class="card-title">Métricas del ICA (Índice de Calidad del Aire)</h3>
+                                </div>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>CO2</label>
+                                                <input class="form-control" type="number" name="carbon_monoxide" #carbon_monoxide="ngModel" 
+                                                [(ngModel)]="marcador.co2" required>
+                                                <sub *ngIf="carbon_monoxide.touched && !carbon_monoxide.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>NO2</label>
+                                                <input class="form-control" type="number" name="nitrogen_dioxide" #nitrogen_dioxide="ngModel" 
+                                                [(ngModel)]="marcador.no2" required>
+                                                <sub *ngIf="nitrogen_dioxide.touched && !nitrogen_dioxide.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>O3</label>
+                                                <input class="form-control" type="number" name="ozone" #ozone="ngModel" 
+                                                [(ngModel)]="marcador.o3" required>
+                                                <sub *ngIf="ozone.touched && !ozone.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>H2S</label>
+                                                <input class="form-control" type="number" name="hidrogen_sulfide" #hidrogen_sulfide="ngModel" 
+                                                [(ngModel)]="marcador.h2s" required>
+                                                <sub *ngIf="hidrogen_sulfide.touched && !hidrogen_sulfide.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>SO2</label>
+                                                <input class="form-control" type="number" name="sulfur_dioxide" #sulfur_dioxide="ngModel" 
+                                                [(ngModel)]="marcador.so2" required>
+                                                <sub *ngIf="sulfur_dioxide.touched && !sulfur_dioxide.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>PM_15</label>
+                                                <input class="form-control" type="number" name="pm_25" #pm_25="ngModel" 
+                                                [(ngModel)]="marcador.pm15" required>
+                                                <sub *ngIf="pm_25.touched && !pm_25.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-sm-2">
+                                            <div class="form-group">
+                                                <label>PM_10</label>
+                                                <input class="form-control" type="number" name="pm_10" #pm_10="ngModel" 
+                                                [(ngModel)]="marcador.pm10" required>
+                                                <sub *ngIf="pm_10.touched && !pm_10.valid" style="color: rgb(170, 3, 3);">
+                                                    Campo obligatorio
+                                                </sub>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Formulario de registro de datos ICA-->
                             <div class="card-footer">
-                                <button type="submit" class="btn btn-primary" [disabled]="!formMarcador.form.valid">Guardar</button>
+                                <button id="btn-submit-marcador" type="submit" class="btn btn-primary" [disabled]="!formMarcador.form.valid">Guardar</button>
                             </div>
                         </form>
-                    </div>
+                    </div><!--Formulario de registro de datos-->
                     <div class="col-md-4">
-                        Ubicar coordenadas en el marcador
+                        <strong>Ubicar coordenadas en el marcador</strong>
                         <div id="map2"></div>
                     </div>
                 </div>
