--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
-<footer class="main-footer navbar-dark">
+<footer class="main-footer navbar-dark" id="card_footer">
     <div class="float-right d-none d-sm-block">
       <b>Version</b> 1.0.0
     </div>
-    <strong>Copyright &copy; 2022 <a href="https://www.unach.edu.ec">Universidad Nacional de Chimborazo</a>.</strong> Todos los derecho reservados.
+    <strong>Copyright &copy; 2023 <a href="https://www.unach.edu.ec">Universidad Nacional de Chimborazo</a>.</strong> Todos los derechos reservados.
   </footer>
