--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,5 +2,5 @@
     <div class="float-right d-none d-sm-block">
       <b>Version</b> 1.0.0
     </div>
-    <strong>Copyright &copy; 2023 <a href="https://www.unach.edu.ec">Universidad Nacional de Chimborazo</a>.</strong> Todos los derechos reservados.
+    <strong>Copyright &copy; 2023. Desarrollado por Santiago Heredia</strong>
   </footer>
